--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,10 +84,13 @@ jobs:
         if: matrix.name == 'linux'
         run: ${{ matrix.cargo-command }} test --package ouisync-cli --test cli
 
+      - name: Build
+        run: ${{ matrix.cargo-command }} build --release --bin ouisync
+
       - uses: actions/upload-artifact@v3
         with:
           name: build-${{ matrix.os }}
-          path: target/
+          path: target/release/
 
   check_kotlin_bindings:
     name: check kotlin bindings
