--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,17 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: build-${{ matrix.os }}
-          path: target/release/
+          path: target/release/ouisync*
+      - name: GitHub Release
+        uses: crazy-max/ghaction-github-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          draft: false
+          files: |
+            target/release/ouisync*
+          name: ${{ env.GIT_TAGNAME }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
   check_kotlin_bindings:
     name: check kotlin bindings
